--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,4 @@
 {
-  "name": "shreya",
-  "gcm_sender_id": "513278663837" // replace with actual value
+  "name": "Acme Fashion | Latest in fashion world",
+  "gcm_sender_id": "513278663837"
 }
