--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,4 @@
 {
-  "name": "Acme Fashion | Latest in fashion world",
-  "gcm_sender_id": "513278663837"
+  "name": "Vapid test",
+  "gcm_sender_id": "513278663837" // replace with actual gcm sender ID
 }
